--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T14:16:23Z</date>
+						<date>2018-10-02T15:17:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -442,21 +442,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bSOQuJvLQRf/
-								b8k4qTMfSw==
+								H3vi+vStwCFr
+								ERnkoLWOYA==
 								</data>
 								<key>Size</key>
-								<integer>197000</integer>
+								<integer>197168</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TIK1AuMS1oaY
-								sGFJlvpF0A==
+								2Qwmnvntsnc5
+								9YyrRcyq1A==
 								</data>
 								<key>Size</key>
-								<integer>30521</integer>
+								<integer>30703</integer>
 							</dict>
 							<key>files/stacks_page_page48.php</key>
 							<dict>
@@ -472,11 +472,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oJvbvEBTPL8D
-								arioeC3Q/w==
+								wAdS+f2WRzwv
+								QpI103SgnQ==
 								</data>
 								<key>Size</key>
-								<integer>151506</integer>
+								<integer>153894</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
