--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T14:16:23Z</date>
+						<date>2018-10-02T15:17:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -382,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PQY2XvKgsSn1
-								5UoxxHPxMg==
+								IMmqfC/1JB9R
+								VhBu9mTWfg==
 								</data>
 								<key>Size</key>
-								<integer>122454</integer>
+								<integer>123257</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
