--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/4-Call-for-Erd0151s2013R00E9nyi-Prize/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/4-Call-for-Erd0151s2013R00E9nyi-Prize/Contents.plist
@@ -31,7 +31,84 @@
 					<string>3.6.3</string>
 				</dict>
 				<key>PublishingManifests</key>
-				<dict/>
+				<dict>
+					<key>sftp://cmplxsys.w3.uvm.edu</key>
+					<dict>
+						<key>CreationDate</key>
+						<date>2018-10-02T20:30:44Z</date>
+						<key>DigestAlgorithm</key>
+						<string>MD5</string>
+						<key>PageDigests</key>
+						<dict>
+							<key>index.html</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								IdTuocflGUmP
+								NIPXoOm/yA==
+								</data>
+								<key>Size</key>
+								<integer>43119</integer>
+							</dict>
+							<key>index_files/backgroundImage_110306.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								/ytKW+d8532o
+								LG20qBSPRw==
+								</data>
+								<key>Size</key>
+								<integer>383766</integer>
+							</dict>
+							<key>index_files/small_p60311_n109623.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZFHf9zniv4SK
+								z9ywIWAR7Q==
+								</data>
+								<key>Size</key>
+								<integer>124861</integer>
+							</dict>
+							<key>index_files/stacks-image-2c90133-700x398.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								WNYrWgw4gMan
+								tiFFTLkLNg==
+								</data>
+								<key>Size</key>
+								<integer>60972</integer>
+							</dict>
+							<key>index_files/stacks-image-580baf6-248x248.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OGSW8MSxffNf
+								eqQN8VH97Q==
+								</data>
+								<key>Size</key>
+								<integer>13349</integer>
+							</dict>
+							<key>index_files/stacks-image-90966db-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								YpjTgVVBaf31
+								xzRYJpWpzQ==
+								</data>
+								<key>Size</key>
+								<integer>21870</integer>
+							</dict>
+						</dict>
+						<key>PageID</key>
+						<string>page64</string>
+						<key>SiteRoot</key>
+						<string>events/netsci/calls/ER-Prize</string>
+						<key>Version</key>
+						<integer>3</integer>
+					</dict>
+				</dict>
 			</dict>
 			<key>Files</key>
 			<array/>
