--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:30:44Z</date>
+						<date>2018-10-02T20:38:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,8 +94,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YVaGXaNONbDe
-								UVm82HsYOw==
+								OD8OlYzjni9H
+								EwUr0d66bw==
 								</data>
 								<key>Size</key>
 								<integer>132368</integer>
@@ -114,8 +114,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								F+VniJzhAkqC
-								BWWREistlw==
+								mXQ2FJ/qV7Sv
+								06VUcqRX/Q==
 								</data>
 								<key>Size</key>
 								<integer>59442</integer>
