changes abstract deadline to Jan 10
changes abstract deadline to Jan 10

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6742,7 +6742,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:22:54Z</date>
+						<date>2018-10-02T22:27:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6971,8 +6971,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SKZQ3/IoFgsZ
-								M1nRNRp9Vw==
+								Tsk9pm4l7RYS
+								Abfz1G/ZqQ==
 								</data>
 								<key>Size</key>
 								<integer>85696</integer>
@@ -7094,7 +7094,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:22:54Z</date>
+						<date>2018-10-02T22:27:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7193,8 +7193,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xqux66SrCVFr
-								1D8/yNVyEQ==
+								2Qc4/WT5kbEV
+								Zik8rNHXIw==
 								</data>
 								<key>Size</key>
 								<integer>150738</integer>
@@ -7210,7 +7210,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:38:09Z</date>
+						<date>2018-10-02T22:27:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7289,11 +7289,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mXQ2FJ/qV7Sv
-								06VUcqRX/Q==
+								Ud1pHa7xsRqr
+								ibSJ5+pVAg==
 								</data>
 								<key>Size</key>
-								<integer>59442</integer>
+								<integer>59446</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8066,7 +8066,7 @@
 					<key>page61 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T21:50:43Z</date>
+						<date>2018-10-02T22:27:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8145,11 +8145,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FGbF13GUiz8J
-								rBLxWUDBTQ==
+								KnHKa+0++FBP
+								AKKc4bmdiA==
 								</data>
 								<key>Size</key>
-								<integer>41788</integer>
+								<integer>41804</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10449,7 +10449,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAsg/a2T9kgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAshQqp2cjgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -10460,7 +10460,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCyD9rZQxiA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCyFCqnamKA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
