--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:38:09Z</date>
+						<date>2018-10-02T22:27:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mXQ2FJ/qV7Sv
-								06VUcqRX/Q==
+								Ud1pHa7xsRqr
+								ibSJ5+pVAg==
 								</data>
 								<key>Size</key>
-								<integer>59442</integer>
+								<integer>59446</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
