--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:22:54Z</date>
+						<date>2018-10-02T22:27:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -264,8 +264,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SKZQ3/IoFgsZ
-								M1nRNRp9Vw==
+								Tsk9pm4l7RYS
+								Abfz1G/ZqQ==
 								</data>
 								<key>Size</key>
 								<integer>85696</integer>
