added notification list
added notification list

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -6536,7 +6536,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:22:54Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6705,11 +6705,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								T0gTaFVnywW4
-								c7HBrnPIZQ==
+								wMtt8Ci1C25P
+								rIEz31GgAw==
 								</data>
 								<key>Size</key>
-								<integer>138397</integer>
+								<integer>138938</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -6725,11 +6725,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								c1xv3BvPNFyc
-								jTx7eXEpEA==
+								y57SBMnkftS1
+								pbRB12eyrA==
 								</data>
 								<key>Size</key>
-								<integer>71962</integer>
+								<integer>72291</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6742,7 +6742,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T22:27:29Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6951,11 +6951,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bCATUQuvjOSO
-								8M7Y3GMVEA==
+								6zqbf02FQoEe
+								eFSTqhZuVQ==
 								</data>
 								<key>Size</key>
-								<integer>150570</integer>
+								<integer>151111</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -6971,11 +6971,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Tsk9pm4l7RYS
-								Abfz1G/ZqQ==
+								8TAZy/6hW3zy
+								JCLbnl9GhA==
 								</data>
 								<key>Size</key>
-								<integer>85696</integer>
+								<integer>86036</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6988,7 +6988,7 @@
 					<key>page54 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:22:54Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7057,8 +7057,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NjUysk1kNOSn
-								+LcR81v8Dw==
+								lc4ZHeHsPSrX
+								SaLwdzSHCw==
 								</data>
 								<key>Size</key>
 								<integer>104212</integer>
@@ -7077,11 +7077,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								r+v4mRgCelZ+
-								vM9wg055Tw==
+								F5pmejAKCCsj
+								lqzcJSqS/A==
 								</data>
 								<key>Size</key>
-								<integer>40271</integer>
+								<integer>40349</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7094,7 +7094,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T22:27:29Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7173,11 +7173,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/MAlZEHFeSeL
-								FrOp2LQSRw==
+								X6hHQXDcV+WF
+								cWAtJA46WA==
 								</data>
 								<key>Size</key>
-								<integer>154714</integer>
+								<integer>155255</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -7193,11 +7193,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2Qc4/WT5kbEV
-								Zik8rNHXIw==
+								LtlhTwmZ/Ybf
+								dr6ePASwPQ==
 								</data>
 								<key>Size</key>
-								<integer>150738</integer>
+								<integer>151067</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7210,7 +7210,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T22:27:29Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7269,11 +7269,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OD8OlYzjni9H
-								EwUr0d66bw==
+								BMeYyp0Zkbee
+								GmBoNeBuiw==
 								</data>
 								<key>Size</key>
-								<integer>132368</integer>
+								<integer>134083</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -7289,11 +7289,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ud1pHa7xsRqr
-								ibSJ5+pVAg==
+								ArB4Rt6i++5v
+								dYVTazl3DQ==
 								</data>
 								<key>Size</key>
-								<integer>59446</integer>
+								<integer>60353</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7306,7 +7306,7 @@
 					<key>page57 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:22:54Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7375,11 +7375,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pAiQI/pyvEIy
-								+VUPv7sg0Q==
+								k2xW2jnLKyi0
+								i5c4vcSzdw==
 								</data>
 								<key>Size</key>
-								<integer>120057</integer>
+								<integer>120598</integer>
 							</dict>
 							<key>files/stacks_page_page57.js</key>
 							<dict>
@@ -7395,11 +7395,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MR9MugsbuZAm
-								J7QnSLnynQ==
+								9NHrCDudXgN9
+								BumKAKu25A==
 								</data>
 								<key>Size</key>
-								<integer>49730</integer>
+								<integer>50059</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7412,7 +7412,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:22:54Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7581,11 +7581,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aVsQ63Xdy/We
-								Iv4k+XO35w==
+								qR33g9qk9ALF
+								U0hMiCiRgA==
 								</data>
 								<key>Size</key>
-								<integer>137569</integer>
+								<integer>138110</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
@@ -7601,11 +7601,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Es0yz0YHnnnh
-								B2BDcTSDGg==
+								KvwHycG0ru54
+								KosACQqGIA==
 								</data>
 								<key>Size</key>
-								<integer>70439</integer>
+								<integer>70768</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8066,7 +8066,7 @@
 					<key>page61 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T22:27:29Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8125,11 +8125,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iuVgXyBCoVJf
-								tDRQr/qXEQ==
+								F5xKttT3NvdQ
+								NhsiLCS4mA==
 								</data>
 								<key>Size</key>
-								<integer>103805</integer>
+								<integer>104979</integer>
 							</dict>
 							<key>files/stacks_page_page61.js</key>
 							<dict>
@@ -8145,11 +8145,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KnHKa+0++FBP
-								AKKc4bmdiA==
+								KMgEsfvG4UVB
+								GoBvtfZNlg==
 								</data>
 								<key>Size</key>
-								<integer>41804</integer>
+								<integer>42382</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10445,31 +10445,31 @@
 				ZW1vdGVSZXNvdXJjZVxQdWJsaXNoZWRVUkxdUHVibGlz
 				aGVkRGF0ZV8QD0NoYW5nZWRTdGF0dXNlc1ROYW1lWklk
 				ZW50aWZpZXJZVGltZVN0YW1wWUZpbGVUb2tlbgiAEIAA
-				gACADIAIgAeACoAJXxAkMkU4QzdEREMtQUVCNC00MUZC
-				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
-				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
-				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAshQqp2cjgAvSPj9AQVokY2xhc3Nu
-				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
-				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
-				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
-				P0xNXxATTlNNdXRhYmxlRGljdGlvbmFyeaNMTkJcTlNE
-				aWN0aW9uYXJ50j4/UFFeUldTaXRlUmVzb3VyY2WiUkJe
-				UldTaXRlUmVzb3VyY2XZJQsmJygpKissLS4vL1hZWltc
-				CIAQgACAAIAWgBOAEoAVgBRfECRDNUI0NTE0Ri02RUI5
-				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
-				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
-				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCyFCqnamKA
+				gACADIAIgAeACoAJXxAkQzVCNDUxNEYtNkVCOS00OUM1
+				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
+				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
+				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCyFWMv
+				eniAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
+				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
+				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
+				aWN0aW9uYXJ5o0xOQlxOU0RpY3Rpb25hcnnSPj9QUV5S
+				V1NpdGVSZXNvdXJjZaJSQl5SV1NpdGVSZXNvdXJjZdkl
+				CyYnKCkqKywtLi8vWFlaW1wIgBCAAIAAgBaAE4ASgBWA
+				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
+				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
+				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCyFWMvfZ6A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
-				ckiiWjOAEoAHoiIhgBGABoAP0wkKC3d6SKJaM4ASgAei
-				e3yAG4AggA/UC3+AgYKDESJYQ2hpbGRyZW5WUGFyZW50
-				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegBHSCguH
+				ckiiM1qAB4ASoiEigAaAEYAP0wkKC3d6SKIzWoAHgBKi
+				e3yAG4AggA/UC3+AgYKDESFYQ2hpbGRyZW5WUGFyZW50
+				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegAbSCguH
 				iKCAHdI+P4qLXk5TTXV0YWJsZUFycmF5o4qMQldOU0Fy
 				cmF51At/gIGCjy8vgCKAH4AAgADSCguTiKJ7fIAbgCCA
-				HdQLf4CBgpkRIYAigCGAHoAG0goLnYiggB3SPj+goV8Q
+				HdQLf4CBgpkRIoAigCGAHoAR0goLnYiggB3SPj+goV8Q
 				EFJXU291cmNlTGlzdE5vZGWiokJfEBBSV1NvdXJjZUxp
 				c3ROb2Rl0wkKC6SlSKCggA/SPj+oqV8QElJXUmVzb3Vy
 				Y2VEYXRhYmFzZaKqQl8QElJXUmVzb3VyY2VEYXRhYmFz
@@ -10477,9 +10477,9 @@
 				b3SAAQAIABEAGgAjAC0AMgA3AGAAZgBtAHUAgACHAIoA
 				jACOAJEAkwCVAJcAoAClALAAvwDIANEA2wDdAN8A4QDj
 				AOUA6gDtAO8A8QDzAQYBFQEiATABQgFHAVIBXAFmAWcB
-				aQFrAW0BbwFxAXMBdQF3AZ4BxAHrAfAB+AIBAgMCCAIT
-				AhwCIwImAi8CNgI4AjoCPAI+AkACcAJxAnYCjAKQAp0C
-				ogKxArQCwwLWAtcC2QLbAt0C3wLhAuMC5QLnAw4DRQNs
+				aQFrAW0BbwFxAXMBdQF3AZ4B1QH8AgECCQISAhQCGQIk
+				Ai0CNAI3AkACRwJJAksCTQJPAlECgQKCAocCnQKhAq4C
+				swLCAsUC1ALnAugC6gLsAu4C8ALyAvQC9gL4Ax8DRQNs
 				A3EDegN8A4MDhQOHA4kDiwONA70DwgPPA9MD2QPgA+MD
 				5QPnA+oD7APuA/AD9wP6A/wD/gQBBAMEBQQHBBAEGQQg
 				BDUENwQ5BDsEPQRCBEMERQRKBFkEXQRlBG4EcARyBHQE
