--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:22:54Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,8 +104,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NjUysk1kNOSn
-								+LcR81v8Dw==
+								lc4ZHeHsPSrX
+								SaLwdzSHCw==
 								</data>
 								<key>Size</key>
 								<integer>104212</integer>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								r+v4mRgCelZ+
-								vM9wg055Tw==
+								F5pmejAKCCsj
+								lqzcJSqS/A==
 								</data>
 								<key>Size</key>
-								<integer>40271</integer>
+								<integer>40349</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
