--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T22:27:29Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/MAlZEHFeSeL
-								FrOp2LQSRw==
+								X6hHQXDcV+WF
+								cWAtJA46WA==
 								</data>
 								<key>Size</key>
-								<integer>154714</integer>
+								<integer>155255</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2Qc4/WT5kbEV
-								Zik8rNHXIw==
+								LtlhTwmZ/Ybf
+								dr6ePASwPQ==
 								</data>
 								<key>Size</key>
-								<integer>150738</integer>
+								<integer>151067</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
