--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T22:27:29Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OD8OlYzjni9H
-								EwUr0d66bw==
+								BMeYyp0Zkbee
+								GmBoNeBuiw==
 								</data>
 								<key>Size</key>
-								<integer>132368</integer>
+								<integer>134083</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ud1pHa7xsRqr
-								ibSJ5+pVAg==
+								ArB4Rt6i++5v
+								dYVTazl3DQ==
 								</data>
 								<key>Size</key>
-								<integer>59446</integer>
+								<integer>60353</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
