--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:22:54Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pAiQI/pyvEIy
-								+VUPv7sg0Q==
+								k2xW2jnLKyi0
+								i5c4vcSzdw==
 								</data>
 								<key>Size</key>
-								<integer>120057</integer>
+								<integer>120598</integer>
 							</dict>
 							<key>files/stacks_page_page57.js</key>
 							<dict>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MR9MugsbuZAm
-								J7QnSLnynQ==
+								9NHrCDudXgN9
+								BumKAKu25A==
 								</data>
 								<key>Size</key>
-								<integer>49730</integer>
+								<integer>50059</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
