--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:22:54Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -204,11 +204,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aVsQ63Xdy/We
-								Iv4k+XO35w==
+								qR33g9qk9ALF
+								U0hMiCiRgA==
 								</data>
 								<key>Size</key>
-								<integer>137569</integer>
+								<integer>138110</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Es0yz0YHnnnh
-								B2BDcTSDGg==
+								KvwHycG0ru54
+								KosACQqGIA==
 								</data>
 								<key>Size</key>
-								<integer>70439</integer>
+								<integer>70768</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
