--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:22:54Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -204,11 +204,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								T0gTaFVnywW4
-								c7HBrnPIZQ==
+								wMtt8Ci1C25P
+								rIEz31GgAw==
 								</data>
 								<key>Size</key>
-								<integer>138397</integer>
+								<integer>138938</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								c1xv3BvPNFyc
-								jTx7eXEpEA==
+								y57SBMnkftS1
+								pbRB12eyrA==
 								</data>
 								<key>Size</key>
-								<integer>71962</integer>
+								<integer>72291</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
