--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T22:27:29Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iuVgXyBCoVJf
-								tDRQr/qXEQ==
+								F5xKttT3NvdQ
+								NhsiLCS4mA==
 								</data>
 								<key>Size</key>
-								<integer>103805</integer>
+								<integer>104979</integer>
 							</dict>
 							<key>files/stacks_page_page61.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KnHKa+0++FBP
-								AKKc4bmdiA==
+								KMgEsfvG4UVB
+								GoBvtfZNlg==
 								</data>
 								<key>Size</key>
-								<integer>41804</integer>
+								<integer>42382</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
