--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T22:27:29Z</date>
+						<date>2018-10-02T22:37:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bCATUQuvjOSO
-								8M7Y3GMVEA==
+								6zqbf02FQoEe
+								eFSTqhZuVQ==
 								</data>
 								<key>Size</key>
-								<integer>150570</integer>
+								<integer>151111</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -264,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Tsk9pm4l7RYS
-								Abfz1G/ZqQ==
+								8TAZy/6hW3zy
+								JCLbnl9GhA==
 								</data>
 								<key>Size</key>
-								<integer>85696</integer>
+								<integer>86036</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
