--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -8722,7 +8722,7 @@
 					<key>page68 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T19:28:46Z</date>
+						<date>2018-10-03T19:36:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8831,11 +8831,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w8GZcCNozSk5
-								9SwDte9Mqw==
+								U7pkwBNBNh9p
+								B4JCpd6cng==
 								</data>
 								<key>Size</key>
-								<integer>80528</integer>
+								<integer>80527</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9418,7 +9418,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T19:28:46Z</date>
+						<date>2018-10-03T19:36:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10457,11 +10457,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								udRjYHPL9t+6
-								Sy1/qi4aXQ==
+								g0U7vFpNhv9+
+								FnAoyWykOA==
 								</data>
 								<key>Size</key>
-								<integer>4030</integer>
+								<integer>3364</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10565,8 +10565,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCyp/mL
-				kimAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCyqNMv
+				qMaAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10576,7 +10576,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCyp/mLlJaA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCyqNMvq8mA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
