--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-NIH-T32-in-Complexity-and-Neurobiology/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-NIH-T32-in-Complexity-and-Neurobiology/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-03T19:28:46Z</date>
+						<date>2018-10-03T19:36:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w8GZcCNozSk5
-								9SwDte9Mqw==
+								U7pkwBNBNh9p
+								B4JCpd6cng==
 								</data>
 								<key>Size</key>
-								<integer>80528</integer>
+								<integer>80527</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
